--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -213,8 +213,7 @@ jobs:
 #          build-dir: './build'
 
       - name: Publish
-        with:
-          args: netlify deploy --dir=build --prod
+        run: netlify deploy --dir=build --prod
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
