--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -211,6 +211,10 @@ jobs:
 #          netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
 #          netlify-site-id: ${{ secrets.NETLIFY_SITE_ID }}
 #          build-dir: './build'
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: build
 
       - name: Publish
         run: netlify deploy --dir=build --prod
