--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -25,6 +25,8 @@ jobs:
       matrix:
         node-version: [ '16.10.0' ]
     runs-on: ubuntu-latest
+    environment:
+      name: dev
 
     steps:
       - name: Checkout repository
