--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -9,21 +9,40 @@ on:
     inputs:
       action:
         type: choice
-        description: Make a choice
+        description: Select an action.
         required: true
         options:
           - Build
           - dev
           - prod
+      deployFromArtifactory:
+        type: boolean
+        description: Deploy/Release from pre-existing application version from artifactory? Please specify.
+      artifactVersion:
+          description: Enter artifact version
 
 jobs:
+  init:
+    name: Init
+    strategy:
+      fail-fast: ttrue
+    runs-on: ubuntu-latest
+
+
+    steps:
+      - name: Validate
+        if: inputs.deployFromArtifactory == "true" && inputs.artifactVersion == ""
+        uses: actions/github-script@v3
+        with:
+          script: |
+            core.setFailed('Deploy from artifactory option is selected but artifact version not provided!')
   build:
     name: Build
-    if:
     strategy:
       fail-fast: true
       matrix:
         node-version: [ '16.10.0' ]
+    needs: init
     runs-on: ubuntu-latest
 
     steps:
@@ -139,7 +158,7 @@ jobs:
       - name: Compress artifacts
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" build
+          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" build
 
       - name: Publish to artifactory
         uses: advancedcsg-open/action-jfrog-cli@master
@@ -147,7 +166,7 @@ jobs:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
-          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
+          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
   deploy_to_dev:
     name: Deploy to Dev
@@ -173,12 +192,12 @@ jobs:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
           access token: ${{ secrets.JFROG_TOKEN }}
-          args: download "my-job-portal-fe-generic-local/my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" --fail-no-op=true
+          args: download "my-job-portal-fe-generic-local/my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" --fail-no-op=true
 
       - name: Uncompress artifacts
         uses: montudor/action-zip@v1
         with:
-          args: unzip -qq "my-job-portal-${{ steps.package-version.outputs.current-version }}-${{ github.ref_name }}.${{ github.run_number }}-SNAPSHOT.zip" -d build
+          args: unzip -qq "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" -d build
 
       - name: Publish
         uses: amondnet/vercel-action@v20
