--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -31,7 +31,7 @@ jobs:
 
     steps:
       - name: Validate
-        if: inputs.deployFromArtifactory == "true" && inputs.artifactVersion == ""
+        if: inputs.deployFromArtifactory == 'true' && inputs.artifactVersion == ''
         uses: actions/github-script@v3
         with:
           script: |
