--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -1,9 +1,9 @@
 name: my-job-portal-ui
 on:
   push:
-    branches: [JB-3]
+    branches: '**'
   pull_request:
-    branches: [master]
+    branches: [release/*, master]
     types: [opened, closed, reopened]
 
   workflow_dispatch:
@@ -41,7 +41,7 @@ jobs:
 
   build:
     name: Build
-    if: inputs.action == 'build' || ${{ github.event_name == 'push' }}
+    if: inputs.action == 'build' || ${{ github.event_name == 'push' }} || ${{ github.event_name == 'pull_request' }}
     strategy:
       fail-fast: true
       matrix:
