--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -175,7 +175,8 @@ jobs:
   deploy_to_dev:
     name: Deploy to Dev
     if: |
-      (always() && inputs.action == 'dev') || (needs.publish.result == 'success')
+      always() &&
+      ((inputs.action == 'dev' && needs.publish.result == 'success') || (inputs.action == 'dev' && deployFromArtifactory == true))
     strategy:
       fail-fast: true
     runs-on: ubuntu-latest
