--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
+    "path": "^0.12.7",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.3",
     "typescript": "^4.7.4",
