--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -206,6 +206,8 @@ jobs:
 
       - name: xxxxxx
         run: |
+          pwd
+          ls
           echo ${{ steps.artifact-name.outputs.tag }}
         shell: bash
 
