--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -41,7 +41,9 @@ jobs:
 
   build:
     name: Build
-    if: inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request'
+    if: |
+      always() &&
+      (inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request')
     strategy:
       fail-fast: true
       matrix:
