--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -35,7 +35,7 @@ jobs:
       - run: echo '${{ github.event_name }}'
       - name: console
         run: |
-          if (always() && (inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request')) == true; then
+          if ((inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request')); then
             echo "true";
           else
             echo "false";
