JB-3: modifed vercel config

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -140,7 +140,7 @@ jobs:
 
   publish:
     name: Publish Artifacts
-    if: inputs.action == 'build' || inputs.action == 'dev' || (inputs.action == 'prod' && contains(github.ref_name, 'release/'))
+    if: inputs.action == 'build' || inputs.action == 'dev' || inputs.action == 'prod'
     strategy:
       fail-fast: true
     needs: security
