--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -41,12 +41,12 @@ jobs:
             echo "false";
           fi
         shell: bash
-      - name: Validate existence of artifact version
+      - name: Validate existence of artifact version if chosen to deploy from artifactory
         if: (inputs.action == 'dev' || inputs.action == 'prod') && (inputs.deployFromArtifactory == true && inputs.artifactVersion == '')
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('Deploy from artifactory option is selected but artifact version not provided!')
+            core.setFailed('Deploy from artifactory option is selected but artifact version is not provided!')
 
   build:
     name: Build
@@ -178,7 +178,7 @@ jobs:
         with:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
-          access token: ${{ secrets.JFROG_TOKEN }}
+          access token: ${{ secrets.ARTIFACTORY_TOKEN }}
           args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
 
   deploy_to_dev:
@@ -209,7 +209,7 @@ jobs:
           if ${{ inputs.deployFromArtifactory }} == true; then
             echo ::set-output name=tag::${{ inputs.artifactVersion }}
           else
-            echo ::set-output name=tag::"my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip"
+            echo ::set-output name=tag::"copper-ui-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip"
           fi
         shell: bash
 
@@ -218,15 +218,15 @@ jobs:
         with:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
-          access token: ${{ secrets.JFROG_TOKEN }}
-          args: download "my-job-portal-fe-generic-local/${{ steps.artifact-name.outputs.tag }}" --fail-no-op=true
+          access token: ${{ secrets.ARTIFACTORY_TOKEN }}
+          args: download "copper-ui-dev-generic-local/${{ steps.artifact-name.outputs.tag }}" --fail-no-op=true
 
       - name: Uncompress artifacts
         uses: montudor/action-zip@v1
         with:
           args: unzip -qq ${{ steps.artifact-name.outputs.tag }}
 
-      - name: Publish
+      - name: Publish to cloud
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
