--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -171,7 +171,7 @@ jobs:
       - name: Compress artifacts
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" build
+          args: zip -qq -r "copper-ui-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" build
 
       - name: Publish to artifactory
         uses: advancedcsg-open/action-jfrog-cli@master
@@ -179,7 +179,7 @@ jobs:
           url: ${{ secrets.ARTIFACTORY_URL }}
           credentials type: 'accesstoken'
           access token: ${{ secrets.ARTIFACTORY_TOKEN }}
-          args: upload "my-job-portal-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" "my-job-portal-fe-generic-local/" --fail-no-op=true
+          args: upload "copper-ui-${{ steps.package-version.outputs.current-version }}.${{ github.run_number }}-SNAPSHOT.zip" "copper-ui-dev-generic-local/" --fail-no-op=true
 
   deploy_to_dev:
     name: Deploy to Dev
