--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -53,14 +53,14 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('Attempt to release snashot versions to prod is not allowed!')
+            core.setFailed('Attempt to release snapshot versions to prod is not allowed!')
 
       - name: Validate branch getting released to Prod
         if: (inputs.action == 'prod' && !startsWith(${{ github.ref_name }}, 'release/'))
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('Attempt to release snashot versions to prod is not allowed!')
+            core.setFailed('Attempt to release from non-release branches to prod is not allowed!')
 
   build:
     name: Build
