--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -33,7 +33,14 @@ jobs:
       - run: echo '${{inputs.deployFromArtifactory}}'
       - run: echo '${{inputs.action}}'
       - run: echo '${{ github.event_name }}'
-      - run: echo '(!startsWith(${{ github.ref_name }}, 'release/'))'
+      - run:  |
+          if !startsWith(${{ github.ref_name }}, 'release/') == true; then
+            echo 'true';
+          else
+            echo 'false';
+
+          fi
+        shell: bash
       - run: inputs.action == 'prod'
       - name: console
         run: |
