--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -34,7 +34,7 @@ jobs:
       - run: echo '${{inputs.action}}'
       - run: echo '${{ github.event_name }}'
       - run:  |
-          if !startsWith(${{ github.ref_name }}, 'release/') == true; then
+          if startsWith(${{ github.ref_name }}, 'release/') == true; then
             echo 'true';
           else
             echo 'false';
@@ -65,7 +65,7 @@ jobs:
             core.setFailed('Attempt to release snapshot versions to prod is not allowed!')
 
       - name: Validate branch getting released to Prod
-        if: (inputs.action == 'prod' && !startsWith(${{ github.ref_name }}, 'release/'))
+        if: (inputs.action == 'prod' && startsWith(${{ github.ref_name }}, 'release/') == true)
         uses: actions/github-script@v3
         with:
           script: |
