--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -33,15 +33,15 @@ jobs:
       - run: echo '${{inputs.deployFromArtifactory}}'
       - run: echo '${{inputs.action}}'
       - run: echo '${{ github.event_name }}'
-      - run:  |
-          if startsWith(${{ github.ref_name }}, 'release/') == true; then
-            echo 'true';
-          else
-            echo 'false';
-
-          fi
-        shell: bash
-      - run: inputs.action == 'prod'
+#      - run:  |
+#          if startsWith(${{ github.ref_name }}, 'release/') == true; then
+#            echo 'true';
+#          else
+#            echo 'false';
+#
+#          fi
+#        shell: bash
+#      - run: inputs.action == 'prod'
       - name: console
         run: |
           if ((inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request')); then
