--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -65,7 +65,7 @@ jobs:
             core.setFailed('Attempt to release snapshot versions to prod is not allowed!')
 
       - name: Validate branch getting released to Prod
-        if: (inputs.action == 'prod' && startsWith(${{ github.ref_name }}, 'release/') == true)
+        if: (inputs.action == 'prod' && contains(${{ github.ref_name }}, 'release/') == true)
         uses: actions/github-script@v3
         with:
           script: |
