--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -30,27 +30,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo '${{inputs.deployFromArtifactory}}'
-      - run: echo '${{inputs.action}}'
-      - run: echo '${{ github.event_name }}'
-      - run: echo '${{ github.ref_name }}'
-#      - run:  |
-#          if startsWith(${{ github.ref_name }}, 'release/') == true; then
-#            echo 'true';
-#          else
-#            echo 'false';
-#
-#          fi
-#        shell: bash
-#      - run: inputs.action == 'prod'
-      - name: console
+      - name: Parameterized build inputs
         run: |
-          if ((inputs.action == 'build' || ${{ github.event_name }} == 'push' || ${{ github.event_name }} == 'pull_request')); then
-            echo "true";
-          else
-            echo "false";
-          fi
-        shell: bash
+          echo 'Action: ${{inputs.action}}'
+          echo 'DeployFromArtifactory?: ${{inputs.deployFromArtifactory}}'
+          echo 'Artifact version: ${{inputs.artifactVersion}}'
+
       - name: Validate existence of artifact version if chosen to deploy from artifactory
         if: (inputs.action == 'dev' || inputs.action == 'prod') && (inputs.deployFromArtifactory == true && inputs.artifactVersion == '')
         uses: actions/github-script@v3
@@ -70,7 +55,7 @@ jobs:
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('Attempt to release from non-release branches to prod is not allowed!')
+            core.setFailed('Attempt to release any non-release branches to prod is not allowed!')
 
   build:
     name: Build
