--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -1,7 +1,7 @@
 name: my-job-portal-ui
 on:
-  push:
-    branches: '**'
+#  push:
+#    branches: '**'
   pull_request:
     branches: [release/*, master]
     types: [opened, closed, reopened]
@@ -76,7 +76,7 @@ jobs:
 
       - name: Commit History
         run: |
-          echo 'Event type: ${{github.ref_name}}"
+          echo 'Event type: ${{github.ref_name}}'
           git log --pretty=format:"%h %ad%x09%an%x09%s" --date=short --first-parent "${{ github.ref_name }}"  | head -20
 
       - name: Download binary
