JB-3: modifed vercel config

--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -254,7 +254,7 @@ jobs:
       (needs.publish.result == 'success' || inputs.deployFromArtifactory == true)
     strategy:
       fail-fast: true
-    needs: publish
+    needs: deploy_to_dev
     runs-on: ubuntu-latest
     environment:
       name: ${{ inputs.action }}
