--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-job-portal",
-  "version": "1.0.0-SNAPSHOT",
+  "version": "1.0.0",
   "description": "",
   "main": "build/index.html",
   "engines": {
