--- a/.github/workflows/my-job-portal-ci.yml
+++ b/.github/workflows/my-job-portal-ci.yml
@@ -28,7 +28,8 @@ jobs:
     strategy:
       fail-fast: true
     runs-on: ubuntu-latest
-    output1: ${{ steps.step1.outputs.test }}
+    outputs:
+      output1: ${{ steps.step1.outputs.test }}
 
     steps:
       - name: Parameterized build inputs
@@ -82,6 +83,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - run: echo ${{needs.init.outputs.output1}}
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -271,8 +273,6 @@ jobs:
       name: ${{ inputs.action }}
 
     steps:
-      - run: echo ${{needs.init.outputs.output1}}
-
       - name: Checkout repository
         uses: actions/checkout@v3
 
